# jira-agent

./: .dockerignore  .gitignore  DOCKER_K8S_GUIDE.md  README.md  docker-compose.yml  example.json  pyproject.toml
app/: server.py
app/clients/: base_client.py  factory.py  jira_client.py
app/logs/: logger.py
app/tools/: add_issue_comment.py  create_issue_link.py  get_issue_by_id.py  get_unsolved_ticket.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
jiraAgent/: manage.py  requirements.txt
jiraAgent/jiraAgent/: asgi.py  settings.py  urls.py  wsgi.py
jiraAgent/jiraToolWrapper/: jira_client.py  server.py
jiraAgent/jiraToolWrapper/logs/: logger.py
jiraAgent/jiraToolWrapper/tools/: add_issue_comment.py  create_issue.py  create_issue_link.py  get_issue_by_id.py  get_unsolved_ticket.py
jiraAgent/model/: model_generate.py  prompts.json  system_prompts.py
jiraAgent/triage/: models.py  serializers.py  urls.py  views.py
jiraAgent/triage/migrations/: 0001_initial.py
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  kustomization.yaml  secret.example.yaml
model/: 30_prompts.json  model_generate.py  prompts.json  system_prompts.py
