[project]
name = "jira-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
